<?xml version="1.0"?>
<package format="2">
  <name>rqt_sonardyne</name>
  <version>0.0.0</version>
  <description>RQT interface to Sonardyne USBL driver</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>sonardyne_msgs</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rqt_gui</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

